# ponytail-public

./: CMakeLists.txt  README.md  install.sh
src/: main.cpp  matmul.cpp  matmul.h  script.sh  seal_augment.cpp  seal_augment.h  test_ntt.cpp
